backend/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: studyjam-k8s
  labels:
    app.kubernetes.io/part-of: studyjam-week3
