backend/kubernetes/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studyjam-k8s-fe
  labels:
    app.kubernetes.io/name: studyjam-frontend
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: studyjam-week3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: studyjam-k8s-fe
  template:
    metadata:
      labels:
        app: studyjam-k8s-fe
        app.kubernetes.io/name: studyjam-frontend
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: studyjam-week3
    spec:
      containers:
        - name: frontend
          image: africa-south1-docker.pkg.dev/dvt-lab-devfest-2025/studyjam-repo/studyjam-frontend:gke-latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
