backend/kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: studyjam-k8s-be
  labels:
    app.kubernetes.io/name: studyjam-backend
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: studyjam-week3
spec:
  type: ClusterIP
  selector:
    app: studyjam-k8s-be
  ports:
    - port: 3000
      targetPort: 3000
      name: http
